# clipstash_rust

./: Cargo.toml
src/lib/: mod.rs
src/lib/data/: mod.rs  model.rs
src/lib/domain/: time.rs
src/lib/domain/clip/: mod.rs
src/lib/domain/clip/field/: clip_id.rs  hits.rs  password.rs  shortcode.rs
src/lib/service/: action.rs  ask.rs  mod.rs
src/lib/web/: ctx.rs  mod.rs  renderer.rs
