[package]
name = "clipstash"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
chrono = {version= "0.4", features=["serde"]}
serde = {version= "1", features=["derive"]}
serde_json ="1"
thiserror = "1"
uuid = {version= "0.8", features=["serde", "v4"]}
derive_more= "0.99"
rand = "0.8.4"
sqlx = {version="0.5.10", features=["sqlite", "runtime-tokio-rustls","macros", "chrono", "uuid"]}
handlebars ={ version = "4.2.1", features = ["dir_source"] }
rocket ={version= "0.5.0-rc.1", features=["json"]}
